Fix scrollbar on iphone

--- a/article.css
+++ b/article.css
@@ -21,7 +21,7 @@ footer {
 }
 
 blockquote::before { content: '| '; }
-blockquote { margin: 1em; font-style: italic; color: grey; }
+blockquote { margin: 1em; font-style: italic; color: grey; overflow-x: hidden; }
 
 mark { background-color: hsla(50, 100%, 80%, 0.6); }
 em { background-color: hsla(80, 100%, 80%, 0.6); font-style: normal; }
